@startuml
'https://plantuml.com/class-diagram

class Game {
}

class Die {
    faceValue
}

class Player {
    name
}

class Fields {
    name
    price
    rent
    color
}


class FieldGroup {
}

class Account {
    balance
}

class ChanceCards {
    name
}

Game "1" -r "3..6" Player : Includes
Game "1" -l "2" Die : Includes
Game "1" -- "40" Fields : Includes
Fields "3" -- "1" FieldGroup : Includes
Player  "1" -d- "1" Account: Includes
Game "1" -d- "49" ChanceCards: Includes
@enduml